<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    style="@style/Screen">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/reader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/reader" />

        <TextView
            android:id="@+id/tvtentaikhoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvgmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/tvtentaikhoan"
            app:layout_constraintStart_toStartOf="@+id/tvtentaikhoan"
            app:layout_constraintTop_toBottomOf="@+id/tvtentaikhoan" />

        <Button
            android:id="@+id/btndangxuat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="#C744C9DA"
            android:text="Đăng xuất"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/thongtin"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvgmail"
            style="@style/AccountIcon"/>

        <Button
            android:id="@+id/btnthongtin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00E95B5B"
            android:text="@string/thong_tin_app"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/thongtin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toEndOf="@+id/thongtin"
            app:layout_constraintTop_toTopOf="@+id/thongtin"
            app:layout_constraintVertical_bias="0.461" />

        <Button
            android:id="@+id/thongbaobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="#00E95B5B"
            android:text="@string/cap_quyen_thong_bao"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/thongbao"
            app:layout_constraintStart_toEndOf="@+id/thongbao"
            app:layout_constraintTop_toTopOf="@+id/thongbao"
            app:layout_constraintVertical_bias="0.384" />


        <ImageView
            android:id="@+id/thongbao"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            style="@style/AccountIcon"
            android:src="@drawable/thongbao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thongtin" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thongbao" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00E95B5B"
            android:text="@string/dark_mode"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toEndOf="@+id/switcher"
            app:layout_constraintTop_toBottomOf="@+id/thongbaobtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>